--- a/react-portfolio/src/components/pages/about.css
+++ b/react-portfolio/src/components/pages/about.css
@@ -1,17 +1,44 @@
 .about-container{
-    background-color: rgb(159, 229, 169);
+    background-color: rgb(144, 169, 226);
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 30em;
+}
+.back{
+    height:25em;
+    width:100%;
 }
 .prof{
     border-radius: 50%;
     width: 200px;
     margin-left: 40px;
     margin-top: 20px;
+    margin-bottom: 10%;
 }
-h1{
-    font-size: 60px;
+.about-header  {
+  position: relative;
+}
+.about-title{
+    font-size: 6em;
+  font-weight: bold;
+  color: #cabbd6; 
+  text-align: center;
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+transform: translate(-50%, -50%);
+  font-family: serif;
+  text-shadow: 2px 2px 4px #4b022f;
+}
+
+.about-text p{
+    font-size: 20px;
     font-weight: bold;
-    color: #fff;
-    text-align: center;
+    color: #470a76a1;
+    text-align: left;
     margin-top: 20px;
-   font-family: Garamond;
+    margin: 3%;
+    font-family: serif;
+    
 }
