--- a/react-portfolio/src/components/pages/about.css
+++ b/react-portfolio/src/components/pages/about.css
@@ -1,27 +1,41 @@
-.about-container{
-    background-color: rgb(144, 169, 226);
-    display: flex;
-    align-items: center;
-    position: relative;
-    height: 30em;
+html, body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* background-color: rgb(144, 169, 226); */
+    background-color:  rgb(100, 103, 168);
+}
+.about-container {
+  background-color: rgb(100, 103, 168);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 30vh;
+  background-size: cover;
+}
+.about-container img {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  margin-top: -10em;
+  z-index: 1;
 }
 .back{
     height:25em;
     width:100%;
-}
-.prof{
-    border-radius: 50%;
-    width: 200px;
-    margin-left: 40px;
-    margin-top: 20px;
-    margin-bottom: 10%;
-}
+    border-width: 1em;
+    border-style: solid;
+    border-color: rgb(144, 169, 226) ;
+
+}                                             
 .about-header  {
   position: relative;
 }
 .about-title{
     font-size: 6em;
   font-weight: bold;
+  z-index: 2;
   color: #cabbd6; 
   text-align: center;
   position: absolute; 
@@ -32,13 +46,13 @@ transform: translate(-50%, -50%);
   text-shadow: 2px 2px 4px #4b022f;
 }
 
-.about-text p{
+.about-text P{
     font-size: 20px;
     font-weight: bold;
-    color: #470a76a1;
-    text-align: left;
-    margin-top: 20px;
-    margin: 3%;
+    color: rgb(184, 195, 220);
+    text-align: center;
     font-family: serif;
-    
+    top: 80%;
+    margin-top: 2em;
+    margin-left: 2em;
 }
