--- a/react-portfolio/src/components/pages/about.css
+++ b/react-portfolio/src/components/pages/about.css
@@ -4,6 +4,7 @@ html, body{
     box-sizing: border-box;
     /* background-color: rgb(144, 169, 226); */
     background-color:  rgb(100, 103, 168);
+    
 }
 .about-container {
   background-color: rgb(100, 103, 168);
@@ -53,6 +54,5 @@ transform: translate(-50%, -50%);
     text-align: center;
     font-family: serif;
     top: 80%;
-    margin-top: 2em;
-    margin-left: 2em;
+    margin: 2em;
 }
