added resume download functionality

--- a/react-portfolio/src/components/pages/projects.css
+++ b/react-portfolio/src/components/pages/projects.css
@@ -6,28 +6,33 @@ html, body{
     background-color:  rgb(100, 103, 168);
     
 }
-.project-title{
+
+.project-container {
+    position: relative; /* Set the parent container to relative */
+}
+
+.project-title {
     font-size: 6em;
     font-weight: bold;
     z-index: 2;
     color: #cabbd6; 
     text-align: center;
     position: absolute; 
-    top: 30%; 
+    top: 35%; 
     left: 50%; 
+    padding-bottom: 2em;
     transform: translate(-50%, -50%);
     font-family: serif;
     text-shadow: 2px 2px 4px #4b022f;
-  }
-.project-container{
-    position: relative;
 }
 .image-container {
     display: flex; /* Make the images appear side by side */
     justify-content: space-around; /* Adjust spacing between the images */
+    align-items: center; /* Align flex items along the cross axis (vertically) */
     flex-wrap: wrap; /* Wrap the images if the width exceeds 200px */
-    background-color:  rgb(100, 103, 168);
-  }
+    background-color: rgb(100, 103, 168);
+    padding-top: 2em;
+} 
   
 
  .schedule , .book, .throne{
@@ -40,6 +45,8 @@ html, body{
     margin: 2em;
     background-color:#cabbd6 ;
     padding:0;
+    
+
  }
  .schedule, .book{
     height: 25em;
